alignment fixes

--- a/client/src/components/add-return-trip/index.css
+++ b/client/src/components/add-return-trip/index.css
@@ -7,7 +7,6 @@
     align-items: center;
     justify-content: center;
     padding: 3%;
-    width: 600px;
     height: fit-content;
     border-radius: 15px !important;
     background: white;
