--- a/client/src/components/extras-component/index.css
+++ b/client/src/components/extras-component/index.css
@@ -12,7 +12,6 @@
   flex-direction: column;
   padding: 34px 25px;
   gap: 17px;
-  position: absolute;
 }
 .icon-styles {
   height: 18px;
