--- a/client/src/components/passenger-detail-summary/index.css
+++ b/client/src/components/passenger-detail-summary/index.css
@@ -11,7 +11,6 @@
   padding: 54px 14px 10px 14px;
   display: flex;
   flex-direction: row;
-  position: relative;
   margin-bottom: 3%;
 }
 .grid {
@@ -114,58 +113,4 @@
   text-align: center;
   color: #676767;
   font-style: italic;
-}
-@media only screen and (max-width: 768px) {
-  .card-styles.css-bhp9pd-MuiPaper-root-MuiCard-root {
-    width: 100% !important;
-    height: auto !important;
-    text-align: center;
-  }
-  .price-box {
-    display: inline-block;
-    margin: 0 auto;
-    width: 100%;
-    height: auto;
-    padding: 0;
-  }
-  .list-view-styles {
-    background: #f5f6ff;
-    display: inline-block;
-    margin: 0% 20% !important;
-    width: 100% !important;
-    height: auto;
-  }
-  .passengers {
-    display: inline-block;
-    width: 110px !important;
-    font-size: 11px !important;
-    padding: 7px;
-  }
-  .suitcase {
-    display: inline-block;
-    width: 100px !important;
-    font-size: 11px !important;
-  }
-  .passenger-div-styles {
-    margin-bottom: 5% !important;
-  }
-
-  .grid {
-    grid-template-columns: 100%;
-  }
-
-  .col-main {
-    grid-row: auto;
-  }
-
-  .row-2 {
-    grid-template-columns: 1fr;
-  }
-
-  .col-sub-1,
-  .col-sub-2 {
-    grid-row: auto;
-    margin: 0 20%;
-    width: 100%;
-  }
 }
