--- a/client/src/components/passenger-details-form/index.css
+++ b/client/src/components/passenger-details-form/index.css
@@ -3,7 +3,6 @@
   font-family: "Rubik", sans-serif;
 }
 .passenger-detail-card-style.css-bhp9pd-MuiPaper-root-MuiCard-root {
-  width: 569px;
   height: 320px;
   background: #ffffff;
   box-shadow: 0px 4px 70px rgba(62, 62, 185, 0.08);
@@ -12,7 +11,6 @@
   flex-direction: column;
   padding: 54px 25px;
   gap: 17px;
-  position: absolute;
 }
 .icon-styles {
   margin: 0px 5px;
@@ -25,7 +23,6 @@
 }
 .css-1e6y48t-MuiButtonBase-root-MuiButton-root {
   border: 1px solid #341ea0;
-  position: absolute;
   width: 200px;
   background: #341ea0;
   border-radius: 12px;
@@ -61,29 +58,4 @@
 }
 .submit-icon-style {
   margin: 0 7px;
-}
-@media (max-width: 768px) {
-  .passenger-detail-card-style.css-bhp9pd-MuiPaper-root-MuiCard-root {
-    top: 1331px;
-    width: 100% !important;
-    height: auto !important;
-  }
-  .submit-styles.css-1e6y48t-MuiButtonBase-root-MuiButton-root {
-    position: absolute;
-    color: #ffffff;
-    width: 260px !important;
-    height: 45px;
-    background: #341ea0;
-    border-radius: 12px;
-    font-size: 12px !important;
-  }
-  .submit-icon-style {
-    margin: 1% 5% !important;
-    width: 15px;
-  }
-  .warning-text {
-    font-size: 10px;
-    margin: 0;
-    width: 155%;
-  }
 }
