--- a/client/src/pages/home/index.css
+++ b/client/src/pages/home/index.css
@@ -1,27 +1,5 @@
-.grid-container {
-  display: grid;
-  grid-template-columns: 65% 35%;
-  width: 1000px;
-  padding: 8%;
-}
-.step-back {
-  background: red;
-  width: 120%;
-}
-
-.column1 {
-  grid-row: 1 / span 2;
-}
-@media only screen and (max-width: 768px) {
-  .grid-container {
-    grid-template-columns: 100%;
-  }
-
-  .column1 {
-    grid-row: auto;
-  }
-  .step-back {
-    background: red;
-    width: 120%;
-  }
+.home-container{
+	max-width: 1000px;
+	margin-left: auto;
+	margin-right: auto;
 }
